<resources>
    <string name="app_name">Complaint System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="about_page">  The Online Complaint System provides an online way of solving the problems faced by the public by saving time and eradicate corruption. The objective of the complaints management system is to make complaints easier to coordinate, monitor, track and resolve, and target problem areas, monitor complaints handling performance and your complaints are highly secured to manage . Online Complaint Management is a management technique for assessing, analyzing and responding to public complaints. Complaints management software is used to record resolve and respond to customer complaints, requests as well as facilitate any other feedback.</string>
    <string name="about_us">About Us</string>
    <string name="account_managing">account management</string>
    <string name="add_new_supervisor">Add New Supervisor</string>
    <string name="added">Added</string>
    <string name="admin">Admin</string>
    <string name="admin_info">admin info</string>
    <string name="admin_speak"> Your complaints have been highly secure.The quick responding for your reports.At the same time, if your complaint is false, appropriate action will be taken against you.</string>
    <string name="all_complaints">All Complaints</string>
    <string name="applied">Applied</string>
    <string name="apply_date">Apply Date</string>
    <string name="c_compliant">Complaint</string>
    <string name="change">change</string>
    <string name="change_admin_password">Change Admin Password</string>
    <string name="complaints">Complaints</string>
    <string name="completed">completed</string>
    <string name="compliant">complaints</string>
    <string name="compliant_level">Complaint Level</string>
    <string name="compliant_type">Complaint Type</string>
    <string name="contact_us">Contact Us</string>
    <string name="email">Email</string>
    <string name="feedback">Feedback</string>
    <string name="head_about">About Us:</string>
    <string name="head_admin_speak">Admin Speak:</string>
    <string name="head_officer_speak">Officer Speak:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="id">Id</string>
    <string name="information">information</string>
    <string name="information_title">Information Title</string>
    <string name="item_view_role_description">Tab</string>
    <string name="kalavaippatty">Kalavaippatty</string>
    <string name="kunnakulam">Kunnakulam</string>
    <string name="location">Location</string>
    <string name="login">login</string>
    <string name="logout">LogOut</string>
    <string name="manalippallum">Manalippallum</string>
    <string name="material_clock_display_divider">:</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mobile_number">Mobile number</string>
    <string name="new_password">New Password</string>
    <string name="office_speak"> The compliant system using this processor all your complaints will come to us directly. This will reduce the time you spend on it.</string>
    <string name="officer">officer</string>
    <string name="password">Password</string>
    <string name="post_compliant">post</string>
    <string name="processing">Processing</string>
    <string name="program_date">Program_Date</string>
    <string name="program_time">Program Time</string>
    <string name="project_id">firstapp-f5382</string>
    <string name="remove_supervisor">Remove supervisor</string>
    <string name="removed">Removed</string>
    <string name="salaippatty">Salaippatty</string>
    <string name="search">search</string>
    <string name="search_menu_title">Search</string>
    <string name="searching">search</string>
    <string name="send">send</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="street">Street</string>
    <string name="submit">submit</string>
    <string name="supervisor">supervisor</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="thiruvellarai">Thiruvellarai</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="upload_changes">Upload Changes</string>
    <string name="upload_img">Upload Image</string>
    <string name="view_profile">view profile</string>
    <string name="view_status">view status</string>
    <string name="your_id">Your Id</string>

</resources>