<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contacts"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/terms_and_conditions"
            android:title="@string/terms_condition" />
        <item
            android:icon="@drawable/log_out"
            android:onClick="handleLogOutItem"
            android:title="@string/logout" />
    </group>
</menu>
