<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:padding="20dp" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:overScrollMode="never">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20sp" android:textColor="@color/black" android:id="@+id/text_about" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/head_about" android:textAlignment="viewStart"/>
        <TextView android:textSize="20sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/about_page" android:textAlignment="viewStart" android:justificationMode="1" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="20sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/head_officer_speak" android:textAlignment="viewStart"/>
        <TextView android:textSize="20sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/office_speak" android:textAlignment="viewStart" android:justificationMode="1" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="20sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/head_admin_speak" android:textAlignment="viewStart"/>
        <TextView android:textSize="20sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/admin_speak" android:textAlignment="viewStart" android:justificationMode="1" app:layout_constraintTop_toTopOf="0"/>
    </LinearLayout>
</ScrollView>
