<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:padding="8dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/i_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:hint="@string/information_title" app:endIconMode="2" app:errorEnabled="true" app:errorTextColor="@color/red" app:layout_constraintTop_toTopOf="0" app:startIconDrawable="@drawable/ic_baseline_title" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/in_title" android:layout_width="match_parent" android:layout_height="60dp" android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/i_applyDate" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/apply_date" app:endIconMode="2" app:errorEnabled="true" app:errorTextColor="@color/red" app:layout_constraintTop_toBottomOf="@+id/i_title" app:startIconDrawable="@drawable/ic_baseline_date" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/in_applyDate" android:focusable="false" android:clickable="true" android:layout_width="match_parent" android:layout_height="60dp" android:editable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/i_subDate" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/program_date" app:endIconMode="2" app:errorEnabled="true" app:errorTextColor="@color/red" app:layout_constraintTop_toBottomOf="@+id/i_applyDate" app:startIconDrawable="@drawable/ic_baseline_date" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/in_subdate" android:focusable="false" android:clickable="true" android:layout_width="match_parent" android:layout_height="60dp" android:editable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/textInputLayout_time" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/program_time" app:endIconMode="2" app:errorEnabled="true" app:errorTextColor="@color/red" app:layout_constraintTop_toBottomOf="@+id/i_subDate" app:startIconDrawable="@drawable/ic_baseline_access_time" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/in_time" android:focusable="false" android:clickable="true" android:layout_width="match_parent" android:layout_height="60dp" android:editable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button android:gravity="center" android:id="@+id/send_btn" android:padding="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28dp" android:text="@string/send" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.95" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textInputLayout_time"/>
</androidx.constraintlayout.widget.ConstraintLayout>
