<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/c_button" android:windowSoftInputMode="adjustResize">
    <androidx.constraintlayout.widget.ConstraintLayout android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/c_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="13dp" android:hint="@string/name" app:endIconMode="2" app:errorEnabled="true" app:errorIconDrawable="@drawable/ic_error" app:errorTextColor="@color/red" app:layout_constraintTop_toTopOf="0" app:startIconDrawable="@drawable/ic_name" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <EditText android:enabled="true" android:textColor="@color/purple_500" android:id="@+id/name" android:layout_width="match_parent" android:layout_height="60dp" android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/c_email" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/email" app:endIconMode="2" app:errorEnabled="true" app:errorIconDrawable="@drawable/ic_error" app:errorTextColor="@color/red" app:layout_constraintTop_toBottomOf="@+id/c_name" app:startIconDrawable="@drawable/ic_baseline_email_24" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <EditText android:enabled="true" android:textColor="@color/purple_500" android:id="@+id/email" android:layout_width="match_parent" android:layout_height="60dp" android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/c_mobile" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/mobile_number" app:counterEnabled="true" app:counterMaxLength="10" app:endIconMode="2" app:errorEnabled="true" app:errorIconDrawable="@drawable/ic_error" app:errorTextColor="@color/red" app:layout_constraintTop_toBottomOf="@+id/c_email" app:prefixText="+1" app:prefixTextColor="@color/purple_500" app:startIconDrawable="@drawable/ic_phone" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <EditText android:enabled="true" android:textColor="@color/purple_500" android:id="@+id/mobile" android:layout_width="match_parent" android:layout_height="60dp" android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/place" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/street" app:endIconMode="2" app:errorEnabled="true" app:errorIconDrawable="@drawable/ic_error" app:errorTextColor="@color/red" app:layout_constraintTop_toBottomOf="@+id/c_mobile" app:startIconDrawable="@drawable/ic_baseline_streetview_24" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <EditText android:enabled="true" android:textColor="@color/purple_500" android:id="@+id/street" android:layout_width="match_parent" android:layout_height="60dp" android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/c_location" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/location" app:boxBackgroundMode="2" app:layout_constraintTop_toBottomOf="@+id/place" app:startIconDrawable="@drawable/ic_location" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
            <AutoCompleteTextView android:textColor="@color/purple_500" android:id="@+id/location" android:layout_width="match_parent" android:layout_height="60dp" android:inputType="none|text|textAutoCorrect|textAutoComplete"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/c_compliant_type" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:hint="@string/compliant_type" android:backgroundTint="@color/purple_500" app:boxBackgroundMode="2" app:layout_constraintTop_toBottomOf="@+id/c_location" app:startIconDrawable="@drawable/ic_compliant_type" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
            <AutoCompleteTextView android:textColor="@color/purple_500" android:id="@+id/compliant_type" android:layout_width="match_parent" android:layout_height="60dp" android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/c_compliant_level" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:hint="@string/compliant_level" app:boxBackgroundMode="2" app:layout_constraintTop_toBottomOf="@+id/c_compliant_type" app:startIconDrawable="@drawable/ic_level" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
            <AutoCompleteTextView android:textColor="@color/purple_500" android:id="@+id/compliant_level" android:layout_width="match_parent" android:layout_height="60dp" android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/c_compliant" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:hint="@string/c_compliant" app:endIconMode="2" app:errorEnabled="true" app:errorIconDrawable="@drawable/ic_error" app:errorTextColor="@color/red" app:layout_constraintTop_toBottomOf="@+id/c_compliant_level" app:startIconDrawable="@drawable/ic_compliant" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <EditText android:enabled="true" android:textColor="@color/purple_500" android:id="@+id/compliant" android:layout_width="match_parent" android:layout_height="60dp" android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/purple_500" android:id="@+id/text_upload" android:paddingLeft="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/upload_img" app:layout_constraintTop_toBottomOf="@+id/c_compliant"/>
        <ImageView android:id="@+id/uploadImage" android:background="@color/white" android:layout_width="match_parent" android:layout_height="70dp" android:src="@drawable/ic_uplode" android:hapticFeedbackEnabled="true" app:layout_constraintTop_toBottomOf="@+id/text_upload"/>
        <Button android:textSize="14sp" android:textStyle="bold" android:id="@+id/c_button" android:padding="10dp" android:layout_width="295dp" android:layout_height="55dp" android:layout_marginTop="30dp" android:text="@string/submit" android:layout_marginStart="53dp" android:layout_marginEnd="53dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/uploadImage"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
