<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="right" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageButton android:id="@+id/alert_close_btn" android:background="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7dp" android:src="@drawable/ic_close" android:layout_marginEnd="7dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:padding="30dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:id="@+id/adminImageView" android:layout_width="80dp" android:layout_height="80dp" android:layout_marginBottom="40dp" android:src="@drawable/ic_baseline_password" app:layout_constraintBottom_toTopOf="@+id/id" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0"/>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/id" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/your_id" app:endIconMode="2" app:errorEnabled="true" app:errorTextColor="@color/red" app:startIconDrawable="@drawable/ic_password" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <EditText android:enabled="true" android:textColor="@color/purple_500" android:id="@+id/admin_id" android:layout_width="match_parent" android:layout_height="60dp" android:text="12345" android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/new_pass" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/new_password" app:endIconMode="2" app:errorEnabled="true" app:errorTextColor="@color/red" app:layout_constraintTop_toBottomOf="@+id/id" app:startIconDrawable="@drawable/ic_baseline_password" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <EditText android:enabled="true" android:textColor="@color/purple_500" android:id="@+id/admin_newPassword" android:layout_width="match_parent" android:layout_height="60dp" android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button android:textSize="15sp" android:id="@+id/admin_btn" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/submit" android:textAlignment="center" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/new_pass"/>
        <Button android:textSize="15sp" android:id="@+id/change_btn" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/change" android:textAlignment="center" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/admin_btn"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
