<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:padding="25dp" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/off_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="100dp" android:hint="@string/id" app:endIconMode="2" app:errorEnabled="true" app:errorIconDrawable="@drawable/ic_error" app:errorTextColor="@color/red" app:layout_constraintTop_toBottomOf="@+id/imageView2" app:startIconDrawable="@drawable/ic_id" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <EditText android:enabled="true" android:textColor="@color/purple_500" android:id="@+id/officer_id" android:layout_width="match_parent" android:layout_height="60dp" android:text="officers@gmail.com" android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/off_Password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:hint="@string/password" app:errorEnabled="true" app:errorIconDrawable="@drawable/ic_error" app:errorTextColor="@color/red" app:layout_constraintTop_toBottomOf="@+id/off_id" app:passwordToggleEnabled="true" app:startIconDrawable="@drawable/ic_password" app:startIconTint="@color/purple_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <EditText android:enabled="true" android:textColor="@color/purple_500" android:id="@+id/officer_password" android:layout_width="match_parent" android:layout_height="60dp" android:text="12345678" android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button android:textSize="14sp" android:textStyle="bold" android:id="@+id/off_log_button" android:padding="14dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:text="@string/login" android:textAlignment="center" app:layout_constraintTop_toBottomOf="@+id/off_Password"/>
        <ImageView android:id="@+id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="76dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/officer_acount"/>
        <TextView android:textSize="14sp" android:textColor="@color/purple_500" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/supervisor" android:textAllCaps="true" android:textAlignment="center" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
