<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <GridLayout android:padding="20dp" android:layout_width="match_parent" android:layout_height="520dp" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:rowCount="2" android:columnCount="2">
        <androidx.cardview.widget.CardView android:layout_gravity="fill" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8dp" android:layout_column="0" android:onClick="handlePostCompliant" android:layout_row="0" android:layout_rowWeight="1" android:layout_columnWeight="1" app:cardBackgroundColor="@color/d_white" app:cardCornerRadius="8dp">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <ImageView android:id="@+id/imageView" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/ic_post_com" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
                <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/post" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/post_compliant" android:layout_below="@+id/imageView" android:layout_centerHorizontal="true" android:textAllCaps="true"/>
                <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/compliant" android:layout_below="@+id/post" android:layout_centerHorizontal="true" android:textAllCaps="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView android:layout_gravity="fill" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8dp" android:layout_column="1" android:onClick="handleViewStatus" android:layout_row="0" android:layout_rowWeight="1" android:layout_columnWeight="1" app:cardBackgroundColor="@color/d_white" app:cardCornerRadius="8dp">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <ImageView android:id="@+id/user_profile" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/terms_and_conditions" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
                <TextView android:textStyle="bold" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/view_status" android:layout_below="@+id/user_profile" android:layout_centerHorizontal="true" android:textAllCaps="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView android:layout_gravity="fill" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8dp" android:layout_column="0" android:onClick="handleAdminInformation" android:layout_row="1" android:layout_rowWeight="1" android:layout_columnWeight="1" app:cardBackgroundColor="@color/d_white" app:cardCornerRadius="8dp">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <ImageView android:id="@+id/user_profile" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/ic_business" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
                <TextView android:textStyle="bold" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/admin_info" android:layout_below="@+id/user_profile" android:layout_centerHorizontal="true" android:textAllCaps="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView android:layout_gravity="fill" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8dp" android:layout_column="1" android:onClick="handleUserProfile" android:layout_row="1" android:layout_rowWeight="1" android:layout_columnWeight="1" app:cardBackgroundColor="@color/d_white" app:cardCornerRadius="8dp">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <ImageView android:id="@+id/user_profile" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/profile" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
                <TextView android:textStyle="bold" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/view_profile" android:layout_below="@+id/user_profile" android:layout_centerHorizontal="true" android:textAllCaps="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</RelativeLayout>
